# Real_Time_Chat

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  example.html  pyproject.toml  requirements.txt
arch/: env.py
chat/: config.py  main.py
chat/category/: models.py  routers.py  schemas.py
chat/core/: models.py  routers.py  schemas.py  serializers.py  ws_connect.py
chat/database/: db.py
chat/guest/: models.py  routers.py  schemas.py
chat/message/: models.py  routers.py  schemas.py
chat/pages/: routers.py
chat/room/: models.py  routers.py  schemas.py
chat/templates/: base.html  chat.html  room_chat.html
chat/websocket/: ws.py
migrations/: env.py
migrations/versions/: 0f0ed322ea4e_update_models.py  39e30fdf3968_create_db.py  3ed1ce0d7eb2_updated_db.py  8693708dc5fc_updated_db.py  ac96d8c64ea1_database_creation.py  d9879fa95e28_database_creation.py  ec0267017f08_database_update.py  ee0a04564ba4_db_creation.py
template/: test.html
tests/: conftest.py
tests/tests_routers/: test_guests.py  test_main.py
